@@ -1,20 +1,24 @@
 package ssafy.ssafyhome.image.application;
 
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.event.TransactionalEventListener;
 import org.springframework.web.multipart.MultipartFile;
 import ssafy.ssafyhome.common.exception.FileException;
+import ssafy.ssafyhome.image.domain.ImageEvent;
 import ssafy.ssafyhome.image.infrastructure.ImageUploader;
 import ssafy.ssafyhome.member.domain.Member;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.stream.Stream;
 
+import static org.springframework.transaction.event.TransactionPhase.AFTER_COMMIT;
 import static ssafy.ssafyhome.common.exception.ErrorCode.DIRECTORY_ACCESS_ERROR;
 
 @Service
@@ -34,16 +38,46 @@ public class ImageService {
         return imageUploader.uploadImages(images, dirName, imageDirPath);
     }
 
-    public List<String> getImagePaths(final Member member, String profileImgDir) {
-        final String imageDirDetailPath = imageDirPath + profileImgDir + member.getDirName();
+    @Async
+    @TransactionalEventListener(phase = AFTER_COMMIT)
+    public void delete(final ImageEvent event) {
+        final List<String> imagePaths = event.imagePaths();
+        imagePaths.parallelStream()
+            .map(Path::of)
+            .forEach(this::deleteFile);
 
-        try (Stream<Path> paths = Files.list(Paths.get(imageDirDetailPath))) {
-            return paths.filter(Files::isRegularFile)
-                .map(path -> path.getFileName().toString())
-                .toList();
+        deleteFile(Path.of(event.dirPath()));
+    }
+
+    private void deleteFile(final Path path) {
+        try {
+            Files.deleteIfExists(path);
         } catch (IOException e) {
             throw new FileException(DIRECTORY_ACCESS_ERROR, e);
         }
+    }
+
+    public List<String> getImageFilePaths(final Member member, final String imgDir) {
+        final List<String> imageFileNames = getImageFileNames(member, imgDir);
+        return imageFileNames.stream()
+            .map(imageFileName -> getImageFileDirPath(member, imgDir) + File.separator + imageFileName)
+            .toList();
+    }
+
+    public List<String> getImageFileNames(final Member member, final String imgDir) {
+        try (Stream<Path> paths = Files.list(Path.of(getImageFileDirPath(member, imgDir)))) {
+            return paths.filter(Files::isRegularFile)
+                .map(path -> path.getFileName().toString())
+                .toList();
+        } catch (NoSuchFileException e) {
+            return List.of();
+        } catch (IOException e) {
+            throw new FileException(DIRECTORY_ACCESS_ERROR, e);
+        }
+    }
+
+    public String getImageFileDirPath(final Member member, final String imgDir) {
+        return imageDirPath + imgDir + member.getDirName();
     }
 
     public List<String> getImageUrlList(
